# catch2-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/main/: CMakeLists.txt  fact.cc  fact.h  main.cc
src/test/: CMakeLists.txt  test_fact.cc
